# src/controllers/adminController.js
@@ -3,6 +3,46 @@ const { Admin } = require('../models/Admin')
 
 // Private route for admins
 const createAdmin = async (req, res) => {
+  /*
+    #swagger.description = "Creates a new admin."
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/admin"
+          }  
+        }
+      }
+    }
+    #swagger.responses[201] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "Admin created successfully"
+          }
+        }           
+      }
+    }
+    #swagger.responses[400] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "To create an admin is necessary to send email and password"
+          }
+        }
+      }           
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while creating the admin"
+          }
+        }           
+      }
+    }
+  */
   try {
     const data = req.body.admin
 
@@ -31,6 +71,42 @@ const createAdmin = async (req, res) => {
 
 // Private route for admins
 const getAllAdmins = async (req, res) => {
+  /*
+    #swagger.description = "List all admins."
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            admins: [
+              {
+                "_id": "64e681dafsd11f2d381231b9",
+                "user": {
+                  "_id": "64e68e2lsdakc1d9jj7697dd",
+                  "email": "admin1@gmail.com"
+                }
+              },
+              {
+                "_id": "64e681252bddef2d381231b9",
+                "user": {
+                  "_id": "64e68e2lsdakc182fc7697dd",
+                  "email": "admin2@gmail.com"
+                }
+              }
+            ]
+          }
+        }           
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while fetching admins"
+          }
+        }           
+      }
+    }
+  */
   try {
     const admins = await Admin.find()
       .populate('user', 'email _id')
@@ -45,6 +121,33 @@ const getAllAdmins = async (req, res) => {
 
 // Private route for admins
 const getAdminByID = async (req, res) => {
+  /*
+    #swagger.description = "Shows information about one admin determined by ID."
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            admin: {
+              "_id": "64e681dafsd11f2d381231b9",
+              "user": {
+                "_id": "64e68e2lsdakc1d9jj7697dd",
+                "email": "admin1@gmail.com"
+              }
+            }
+          }
+        }           
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while fetching the admin"
+          }
+        }           
+      }
+    }
+  */
   try {
     const adminID = req.params.id
 
@@ -62,12 +165,64 @@ const getAdminByID = async (req, res) => {
 
     res.status(200).json({admin})
   } catch (error) {
-    res.status(500).json({ message: error.message })
+    res.status(500).json({ message: "An error occurred while fetching the admin" })
   }
 }
 
 // Private route for admins
 const updateAdminByID = async (req, res) => {
+  /*
+    #swagger.description = "Update information about one admin determined by ID."
+    #swagger.requestBody = {
+      required: true,
+      content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/admin"
+          }  
+        }
+      }
+    }
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "Admin updated successfully"
+          }
+        }           
+      }
+    }
+    #swagger.responses[400] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "To update an admin, at least one field (email, password) must be provided"
+          }
+        }           
+      }
+    }
+    #swagger.responses[403] = {
+      content: {
+        "application/json": {
+          example: {
+            responsePossibilities: [
+              { message: "You do not have sufficient privileges to access this route" },
+              { message: "You do not have the necessary permissions to access this route" }
+            ]
+          },
+        }           
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while updating the admin"
+          }
+        }           
+      }
+    }
+  */
   try {
     const adminID = req.params.id
     const data = req.body.admin
@@ -113,6 +268,39 @@ const updateAdminByID = async (req, res) => {
 
 // Private route for admins
 const deleteAdminByID = async (req, res) => {
+  /*
+    #swagger.description = "Deletes one admin determined by ID."
+    #swagger.responses[200] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "Admin deleted successfully"
+          }
+        }           
+      }
+    }
+    #swagger.responses[403] = {
+      content: {
+        "application/json": {
+          example: {
+            responsePossibilities: [
+              { message: "You do not have sufficient privileges to access this route" },
+              { message: "You do not have the necessary permissions to access this route" }
+            ]
+          },
+        }           
+      }
+    }
+    #swagger.responses[500] = {
+      content: {
+        "application/json": {
+          example: {
+            message: "An error occurred while deleting the admin"
+          }
+        }           
+      }
+    }
+  */
   try {
     const adminID = req.params.id
     const user = req.user
@@ -135,7 +323,7 @@ const deleteAdminByID = async (req, res) => {
 
     res.status(200).json({ message: 'Admin deleted successfully' })
   } catch (error) {
-    res.status(500).json({ message: error.message })
+    res.status(500).json({ message: "An error occurred while deleting the admin" })
   }
 }
 
